--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "babel": "^6.23.0",
     "framer-motion": "^7.6.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/generator": "^7.20.5",
+    "@types/babel__generator": "^7.6.4",
     "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.26"
   }
