--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-animation",
+  "name": "react-netflix-clone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -56,5 +58,6 @@
     "@types/babel__generator": "^7.6.4",
     "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.26"
-  }
+  },
+  "homepage": "https://sadpu111.github.io/react-netflix-clone"
 }
