--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.9",
     "babel": "^6.23.0",
     "framer-motion": "^7.6.15",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-form-hook": "^0.0.1",
